--- a/BlazorApp2.csproj
+++ b/BlazorApp2.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="latticework.cs" Version="1.0.16" />
+  </ItemGroup>
+
 </Project>
