--- a/appsettings.json
+++ b/appsettings.json
@@ -7,3 +7,8 @@
   },
   "AllowedHosts": "*"
 }
+{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-600P8VS\\SQLEXPRESS;Database=TicketingSystem;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  }
+}
