--- a/appsettings.json
+++ b/appsettings.json
@@ -5,10 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
-{
+  "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-600P8VS\\SQLEXPRESS;Database=TicketingSystem;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+      "DefaultConnection": "Server=DESKTOP-600P8VS\\SQLEXPRESS;Database=TicketingSystem;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
 }
