--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "BaseUri":"https: //localhost:7009/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,8 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-
   "ConnectionStrings": {
-      "DefaultConnection": "Server=DESKTOP-600P8VS\\SQLEXPRESS;Database=TicketingSystem;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "TicketingSaytem": "Server=DESKTOP-600P8VS\\SQLEXPRESS;Database=TicketingSystem;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
 }
