--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TicketingSaytem": "Server=DESKTOP-600P8VS\\SQLEXPRESS;Database=TicketingSystem;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "TicketingSystem":"Server=DESKTOP-600P8VS\\SQLEXPRESS;Database=TicketingSystem;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
   }
 }
