--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,13 @@
-{
-  "BaseUri":"https: //localhost:7009/",
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    {
+      "BaseUri": "https: //localhost:7009/",
+      "Logging": {
+        "LogLevel": {
+          "Default": "Information",
+          "Microsoft.AspNetCore": "Warning"
+        }
+      },
+      "AllowedHosts": "*",
+      "ConnectionStrings": {
+        "TicketingSystem": "Server=DESKTOP-600P8VS\\SQLEXPRESS;Database=TicketingSystem;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+      }
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "TicketingSystem":"Server=DESKTOP-600P8VS\\SQLEXPRESS;Database=TicketingSystem;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
-  }
-}
