--- a/appsettings.json
+++ b/appsettings.json
@@ -3,9 +3,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "DetailedErrors": true,
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "TicketingSystem": "Server=DESKTOP-600P8VS\\SQLEXPRESS;Database=TicketingSystem;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
